--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -27,11 +27,13 @@ Extra-Source-Files:
    build_bdist_win64.sh
    build_bdist_maxsat_evaluation.sh
    build_bdist_pb_evaluation.sh
+   build_bdist_qbf_evaluation.sh
    misc/maxsat/toysat/README.md
    misc/maxsat/toysat/toysat
    misc/maxsat/toysat_ls/README.md
    misc/maxsat/toysat_ls/toysat_ls
    misc/pb/README.md
+   misc/qbf/README.md
    src/TseitinEncode.hs
    src/ToySolver/Data/Polyhedron.hs
    samples/gcnf/*.cnf
