--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -269,6 +269,7 @@ Library
      ToySolver.QBF
      ToySolver.SAT
      ToySolver.SAT.Integer
+     ToySolver.SAT.MessagePassing.SurveyPropagation
      ToySolver.SAT.MUS
      ToySolver.SAT.MUS.CAMUS
      ToySolver.SAT.MUS.DAA
