add spsat command as a sample of ToySolver.SAT.MessagePassing.SurveyPropagation

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -582,6 +582,25 @@ Executable svm2lp
   if flag(LinuxStatic)
     GHC-Options: -static -optl-static -optl-pthread
 
+Executable spsat
+  If !flag(BuildSamplePrograms)
+    Buildable: False
+  Main-is: spsat.hs
+  HS-Source-Dirs: samples/programs/spsat
+  Build-Depends:
+    base,
+    array,
+    mwc-random,
+    parse-dimacs,
+    toysolver
+  Default-Language: Haskell2010
+  Other-Extensions: CPP
+  GHC-Options: -threaded
+  if flag(ForceChar8)
+    CPP-OPtions: "-DFORCE_CHAR8"
+  if flag(LinuxStatic)
+    GHC-Options: -static -optl-static -optl-pthread
+
 -- Misc Programs
 
 Executable pigeonhole
