--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -174,6 +174,7 @@ Library
      BangPatterns
      CPP
      DeriveDataTypeable
+     ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
