generalize ToySolver.SAT.TseitinEncoder, ToySolver.SAT.PBNLC, ToySolver.SAT.Integer to use PrimMonad instead of IO monad

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -138,6 +138,7 @@ Library
      primes,
      process >=1.1.0.2,
      parse-dimacs,
+     primitive >=0.6,
      queue,
      heaps,
      vector,
