--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -274,14 +274,15 @@ Library
      ToySolver.Data.Var
      ToySolver.QBF
      ToySolver.SAT
-     ToySolver.SAT.Integer
+     ToySolver.SAT.Encoder.Integer
+     ToySolver.SAT.Encoder.PBNLC
+     ToySolver.SAT.Encoder.Tseitin
      ToySolver.SAT.MessagePassing.SurveyPropagation
      ToySolver.SAT.MUS
      ToySolver.SAT.MUS.CAMUS
      ToySolver.SAT.MUS.DAA
      ToySolver.SAT.MUS.Types
      ToySolver.SAT.MUS.QuickXplain
-     ToySolver.SAT.PBNLC
      ToySolver.SAT.PBO
      ToySolver.SAT.PBO.Context
      ToySolver.SAT.PBO.BC
@@ -290,7 +291,6 @@ Library
      ToySolver.SAT.PBO.MSU4
      ToySolver.SAT.PBO.UnsatBased
      ToySolver.SAT.TheorySolver
-     ToySolver.SAT.TseitinEncoder
      ToySolver.SAT.Types
      ToySolver.SAT.Printer
      ToySolver.SMT
