toysat: allow using UBCSAT when solving WBO problems

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -351,11 +351,13 @@ Executable toysat
     mwc-random,
     containers,
     array,
+    directory,
     process >=1.1.0.2,
     parsec,
     bytestring,
     filepath,
     parse-dimacs,
+    temporary,
     unbounded-delays,
     vector,
     pseudo-boolean,
