add --linearlize and --linearizer-pb options to pbconvert/lpconvert commands

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -234,6 +234,7 @@ Library
      ToySolver.Converter.MaxSAT2NLPB
      ToySolver.Converter.MaxSAT2WBO
      ToySolver.Converter.PB2IP
+     ToySolver.Converter.PBLinearlization
      ToySolver.Converter.PB2LSP
      ToySolver.Converter.PB2SAT
      ToySolver.Converter.PB2WBO
