--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -35,6 +35,7 @@ Extra-Source-Files:
    misc/pb/README.md
    misc/qbf/README.md
    src/ToySolver/Data/Polyhedron.hs
+   src/ToySolver/SAT/MessagePassing/SurveyPropagation/sp.cl
    samples/gcnf/*.cnf
    samples/gcnf/*.gcnf
    samples/gcnf/edn_20403_8.cnf_0.03000000.unsat.gcnf
@@ -110,6 +111,11 @@ Flag UseHaskeline
   Manual: True
   Default: True
 
+Flag OpenCL
+  Description: use opencl package
+  Manual: True
+  Default: False
+
 source-repository head
   type:     git
   location: git://github.com/msakai/toysolver.git
@@ -163,6 +169,9 @@ Library
      Build-Depends: temporary >1.2.0.2, exceptions >=0.6
   else
      Build-Depends: temporary >=1.2, exceptions ==0.5
+  if flag(OpenCL)
+     Build-Depends: OpenCL >=1.0.3.4
+     Exposed-Modules: ToySolver.SAT.MessagePassing.SurveyPropagation.OpenCL
   if impl(ghc <7.7)
     Build-Depends:
       -- vector-space depends on MemoTrie, but MemoTrie >=0.6.3 uses extensions that are not available on GHC 7.6.
@@ -606,6 +615,24 @@ Executable spsat
   Default-Language: Haskell2010
   Other-Extensions: CPP
   GHC-Options: -threaded
+  if flag(ForceChar8)
+    CPP-OPtions: "-DFORCE_CHAR8"
+  if flag(LinuxStatic)
+    GHC-Options: -static -optl-static -optl-pthread
+
+Executable spcl
+  if flag(OpenCL) && flag(BuildSamplePrograms)
+    -- we do not want to depend on OpenCL if we do not build.
+    Build-Depends:
+      base,
+      OpenCL,
+      toysolver
+  else
+    Buildable: False
+  Main-is: spcl.hs
+  HS-Source-Dirs: samples/programs/spcl
+  Default-Language: Haskell2010
+  Other-Extensions: CPP
   if flag(ForceChar8)
     CPP-OPtions: "-DFORCE_CHAR8"
   if flag(LinuxStatic)
