--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -364,6 +364,7 @@ Executable toysat
     containers,
     array,
     directory,
+    data-default,
     process >=1.1.0.2,
     parsec,
     bytestring,
