--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -133,6 +133,7 @@ Library
      transformers-compat >=0.3,
      mtl >=2.1.2,
      array >=0.4.0.0,
+     clock >=0.6.0.1,
      stm >=2.3,
      parsec >=3.1.2 && <4,
      bytestring >=0.9.2.1 && <0.11,
@@ -363,6 +364,7 @@ Executable toysat
     mwc-random,
     containers,
     array,
+    clock,
     directory,
     data-default,
     process >=1.1.0.2,
