--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -159,6 +159,7 @@ Library
      -- createSystemRandom requires mwc-random >=0.13.1.0
      mwc-random >=0.13.1 && <0.14,
      semigroups >=0.17,
+     hashtables,
      OptDir,
      extended-reals >=0.1 && <1.0,
      data-interval >=1.0.1 && <1.3.0,
@@ -224,6 +225,7 @@ Library
      ToySolver.Arith.Simplex
      ToySolver.Arith.Simplex2
      ToySolver.Arith.VirtualSubstitution
+     ToySolver.BellmanFord
      ToySolver.EUF.CongruenceClosure
      ToySolver.EUF.EUFSolver
      ToySolver.EUF.FiniteModelFinder
