ToySolver.Combinatorial.BipartiteMatching: use IntSet/IntMap instead of HashSet/HashMap to reduce memory usage

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -569,7 +569,7 @@ Executable assign
     attoparsec,
     base,
     bytestring,
-    unordered-containers,
+    containers,
     vector,
     toysolver
   Default-Language: Haskell2010
