switch to megaparsec

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -152,7 +152,7 @@ Library
      -- createSystemRandom requires mwc-random >=0.13.1.0
      mwc-random >=0.13.1 && <0.14,
      OptDir,
-     parsec >=3.1.2 && <4,
+     megaparsec >=4 && <6,
      prettyclass >=1.0.0,
      primes,
      primitive >=0.6,
@@ -384,8 +384,8 @@ Executable toysat
     data-default-class,
     directory,
     filepath,
+    megaparsec,
     mwc-random,
-    parsec,
     process >=1.1.0.2,
     pseudo-boolean,
     temporary,
@@ -425,7 +425,7 @@ Executable toysmt
     -- TODO: remove intern dependency
     intern,
     mtl,
-    parsec,
+    parsec >=3.1.2 && <4,
     toysolver,
     text,
     transformers,
@@ -835,10 +835,11 @@ Test-suite TestSuite
     deepseq,
     hashable,
     intern,
+    megaparsec,
     mtl,
     mwc-random,
     OptDir,
-    parsec,
+    parsec >=3.1.2 && <4,
     pseudo-boolean,
     QuickCheck >=2.5 && <3,
     tasty >=0.10.1,
