fix to list Test.Smtlib in toysolver.cabal

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -753,6 +753,7 @@ Test-suite TestSuite
     Test.Simplex2
     Test.SMT
     Test.SMTLIB2Solver
+    Test.Smtlib
     Test.SubsetSum
     Smtlib.Parsers.CommonParsers,
     Smtlib.Parsers.ResponseParsers,
