change PB2LSP and PB2SMP to produce bytestring Builder instead of ShowS

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -484,6 +484,8 @@ Executable toyconvert
   HS-Source-Dirs: toyconvert
   Build-Depends:
     base,
+    bytestring,
+    bytestring-builder,
     data-default-class,
     filepath,
     parse-dimacs,
