--- a/stack.yaml
+++ b/stack.yaml
@@ -45,6 +45,8 @@ extra-deps:
 - parse-dimacs-1.3
 - queue-0.1.2
 - OptDir-0.0.3
+- OpenCL-1.0.3.4
+- logic-TPTP-0.4.4.0
 - data-interval-1.2.0
 - extended-reals-0.2.2.0
 - finite-field-0.8.0
