--- a/stack.yaml
+++ b/stack.yaml
@@ -37,6 +37,10 @@ resolver: lts-6.10
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
+- location:
+    git: git@github.com:msakai/opencl
+    commit: 014d0ee2ee8d474224bab955f1043ea82ed9301b
+  extra-dep: true
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
@@ -45,7 +49,6 @@ extra-deps:
 - parse-dimacs-1.3
 - queue-0.1.2
 - OptDir-0.0.3
-- OpenCL-1.0.3.4
 - logic-TPTP-0.4.4.0
 - data-interval-1.2.0
 - extended-reals-0.2.2.0
