numerlink: add --no-detour option to turn on additional constraints

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -573,6 +573,7 @@ Executable numberlink
     base,
     bytestring,
     containers,
+    data-default-class,
     parsec,
     pseudo-boolean,
     toysolver
