ToySolver.SAT.Encoder.PB: add functionality to encode PB constraint using sorting networks

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -299,6 +299,7 @@ Library
      ToySolver.SAT
      ToySolver.SAT.Encoder.Integer
      ToySolver.SAT.Encoder.PB
+     ToySolver.SAT.Encoder.PB.Internal.Sorter
      ToySolver.SAT.Encoder.PBNLC
      ToySolver.SAT.Encoder.Tseitin
      ToySolver.SAT.MessagePassing.SurveyPropagation
