--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -299,6 +299,8 @@ Library
      ToySolver.SAT
      ToySolver.SAT.Encoder.Integer
      ToySolver.SAT.Encoder.PB
+     ToySolver.SAT.Encoder.PB.Internal.Adder
+     ToySolver.SAT.Encoder.PB.Internal.BDD
      ToySolver.SAT.Encoder.PB.Internal.Sorter
      ToySolver.SAT.Encoder.PBNLC
      ToySolver.SAT.Encoder.Tseitin
