compute survery propagation using log probabilities

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -145,6 +145,7 @@ Library
      hashtables,
      heaps,
      intern >=0.9.1.2 && <1.0.0.0,
+     log-domain,
      loop >=0.2.0 && < 1.0.0,
      mtl >=2.1.2,
      multiset,
